css new changes

--- a/src/css/CollectionNav.css
+++ b/src/css/CollectionNav.css
@@ -1,5 +1,5 @@
 .collection-product-container {
-    padding: 20px;
+    padding: 20px 0;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -93,7 +93,7 @@ select#sortOrder{
 .product-name {
     transition: color 0.3s ease;
     line-height: 18px;
-    margin: 10px;
+    margin: 10px 0;
     font-size: 14px;
     text-align: center;
     color: #000;
@@ -217,6 +217,7 @@ a.product-card-link {
 
 .col-nav.product-grid.list .namebtnnn.nav-data .product-price {
     text-align: left;
+    width: 100%;
 }
 .col-nav.product-grid.list .product-card.list h3{
     margin-left: 0;
@@ -233,6 +234,16 @@ a.product-card-link {
     padding: 10px;
     width: 32%;
     border-radius: 10px;
+}
+@media only screen and ( min-width: 600px ){
+.product-card.list .product-name {
+    margin: 0;
+    text-align: left;
+    width: 100%;
+    white-space: normal;
+    overflow: inherit;
+    text-overflow: inherit;
+}
 }
 
 @media only screen and ( max-width: 600px ){
@@ -275,4 +286,25 @@ a.product-card-link {
         align-items: center;
         flex-direction: column;
     }
+    .col-nav.product-grid.list a.product-card-link {
+        width: 100%;
+        border: 1px solid #eee;
+        margin-right: 0px;
+        display: block;
+    }
+}
+button.toggle-btn.listbtn.active {
+    background-position: -36px -33px;
+}
+
+button.toggle-btn.gridbtn {
+    background-position: 0 0;
+}
+
+button.toggle-btn.gridbtn.active {
+    background-position: 0px -33px;
+}
+
+button.toggle-btn.gridbtn:not(.active):hover {
+    background-position: 0 -33px;
 }
